fix: wrap the search icon in button element

--- a/styles/header.css
+++ b/styles/header.css
@@ -11,7 +11,7 @@ header {
     border: none;
 }
 
-.searchbar-container > img {
+.searchbar-container > button {
     width: 1.5rem;
     aspect-ratio: 1;
 
